src/css/video.less
@import 'basic.less';

.bp-list-container {
    overflow-y: auto;

    .bilibili-player-panel-scrollbar {
        display: none;
    }
}

.bp-list-item {
    @h: 32px;
    width: 100%; height: @h;
    max-width: 100%;
    font-size: 12px; line-height: @h; color: @darkGray;
    display: block;
    cursor: pointer;
    border-bottom: solid 1px fade(black, 3);
    transition: color ease-out 0.12s;
    position: relative;
    display: flex; flex-direction: row;
    background: white;

    &::before {
        content: attr(data-index); display: block;
        width: 40px; height: 100%; line-height: @h !important;
        text-align: center;
        font-size: 10px; opacity: 0.8;
        color: inherit;
    }

    span {
        &[name] {
            width: 100%; color: inherit;
            text-overflow: ellipsis;
            overflow: hidden;
        }

        &[length] {
            width: 88px; color: inherit;
            text-align: left; text-indent: 12px;
            opacity: 0.64;
        }
    }

    &:hover {
        color: @blue;
    }

    &.active {
        color: @blue;

        &:before {
            content: 'play_arrow';
            .material-icons;
            font-size: 18px; text-indent: 0;
        }
    }
}

//CSS adjust
.bilibili-player-auxiliary-area {
    display: inline-flex !important;
    flex-direction: column;
    overflow: hidden;

    .bilibili-player-info {
        min-height: 60px; max-height: 60px;
    }

    .bilibili-player-filter {
        height: 32px; max-height: 32px;
    }

    .bilibili-player-wraplist {
        height: 100%; max-height: 100%;
        flex: 1; overflow: hidden;
    }
}

